# axbench

./: .gitattributes  .gitignore  =0.0.8  =1.52.  README.md  Untitled.ipynb  basic_demo.ipynb  demo.ipynb  eval_demo.ipynb  evaluate.py  generate.py  generate_html.py  highlighted_text_demo.html  highlighted_text_demo_sae_bad.html  pyproject.toml  requirements.txt  symb_ctrl.ipynb  train.py
axbench/: README.md  Untitled.ipynb  __init__.py  download_csv.py  download_parquet.py  experiment_commands.txt  rm_demo.sh  steering.ipynb
axbench/concept16k/: README.md
axbench/concept16k_v2/: README.md
axbench/conceptFD/: README.md
axbench/data/: convert_output_concept.py  download-2b.sh  download-9b.sh  download-alpaca.sh  download-others.sh  download-pls.sh  download-seed-sentences.py  process-feature-description.py
axbench/demo/: concepts.csv  demo.sh  demo_uv.sh  diffmean.sh  lora.sh  lsreft.sh  lsreftcopy.sh  sae.sh  (+1 more)
benchmark/: README.md  __init__.py
demo/: concepts.txt  dataset_state.pkl  gemma-2-2b_20-gemmascope-res-16k.json  main.py  metadata.jsonl  train_data_fragment_0.csv  url_concepts.txt
pyreax/: __init__.py  config.py  constants.py  dataset.py  dataset_dspy.py  html_templates.py  interventions.py  language_models.py  model_utils.py  prompt_utils.py  reax.py  signatures.py  templates.py
reax_benchmark/: __init__.py
scripts/: evaluate.py  generate.py  inference.py  train.py
subctrl/: __init__.py  datasets.py  language_models.py  model_utils.py  prompt_utils.py  template.py  templates.py
tutorials/: eval_demo.ipynb  playground.ipynb  train_demo.ipynb
(+922 files in other folders)
