[project]
name = "pyreax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "datasets>=3.0.2",
    "einops>=0.8.0",
    "httpx>=0.27.2",
    "openai>=1.52.1",
    "pyvene",
    "torch>=2.5.0",
    "transformers",
    "pyvene>=0.1.5",
]
