[project]
name = "pyreax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "datasets>=3.0.2",
    "einops>=0.8.0",
    "httpx>=0.27.2",
    "openai>=1.52.1",
    "pyvene>=0.1.6",
    "torch>=2.5.0",
    "transformers>=4.42.4",
    "dspy>=2.5.16",
    "wandb>=0.18.5",
    "scikit-learn>=1.5.2",
    "seaborn>=0.12.2",
    "pyreft>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"